--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
             <div class="user-message user-message--error"> <%= errorMessage %> </div>
         <% } %>   
 		<div class="header" >
-            <img src='/slr-tiwari1.jpg')></img>
+            <img src='/tcet.jpeg')></img>
             
 			<h1>Login</h1>
 		</div>
